Update: Validando el docker push y despliegue - 1

--- a/k8s/template.yaml
+++ b/k8s/template.yaml
@@ -75,7 +75,7 @@ objects:
                   value: "${APP_VERSION}"
                 - name: AMBIENTE
                   value: "${AMBIENTE}"
-              image: "${REGISTRY}/${APP_NAME}-${AMBIENTE}:${APP_VERSION}"
+              image: "${REGISTRY}"
               imagePullPolicy: IfNotPresent
               livenessProbe:
                 failureThreshold: 3
