Update: Validando el deployment - 4

--- a/k8s/template.yaml
+++ b/k8s/template.yaml
@@ -111,6 +111,8 @@ objects:
           restartPolicy: Always
           securityContext: {}
           terminationGracePeriodSeconds: 30
+      triggers:
+      - type: ConfigChange
 
 parameters:
   - displayName: App name
